# hackathon1

./: .env.example  .eslintrc.js  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile.frontend  README.md  deploy.bat  deploy.sh  docker-compose.yml  docusaurus.config.js  integration-test.js  package-lock.json  package.json  sidebars.js  tasks.md  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  =2.0.3  Dockerfile  README.md  RUNNING_THE_APPLICATION.md  api.py  main.py  main_wrapper.py  mock_server.py  pyproject.toml  requirements.txt  run_server.py  test_cohere_fix.py  test_functions.py
backend/docusaurus_rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/agents/: ai_agent.py  retrieval_tool.py
backend/src/api/: main.py
backend/src/api/middleware/: __init__.py  logging_middleware.py
backend/src/api/routes/: chat.py  health.py  query.py  search.py  validation.py
backend/src/config/: settings.py
backend/src/models/: schemas.py
backend/src/services/: cohere_service.py  qdrant_service.py
backend/tests/unit/test_api/: test_chat.py  test_health.py  test_query.py  test_search.py  test_validation.py
backend/tests/unit/test_services/: test_cohere_service.py  test_qdrant_service.py
docs/: compatibility.md  references.md
docs/chapter-1-introduction-to-physical-ai/: exercises.md  index.md
docs/chapter-10-vision-language-action-vla-systems/: index.md
frontend/: README.md
scripts/: validate-citations.js
(+112 files in other folders)
